# stremlit-duckdb

./: app.py  checkdb.py  pyproject.toml
